# tic_tac_toe

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  PATH.h.in  README.md  conanfile.py  openai_api_key.txt
cmake/: ClangFormat.cmake
doc/: CMakeLists.txt
src/: CMakeLists.txt  ai.cpp  ai.h  base.h  gameconfig.cpp  gameconfig.h  gameconfig.ui  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openai.hpp  res.qrc  tictactoewidget.cpp  tictactoewidget.h
tests/: CMakeLists.txt  tst_t1.cpp  tst_t2.cpp  tst_t3.cpp
